external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/named_struct_middle_autocomplete.ide.exp
error[E03010]: unbound field
   ┌─ tests/move_2024/ide_mode/named_struct_middle_autocomplete.move:14:21
   │
14 │         let _tmp2 = _s.b.x;
   │                     ^^^^ Unbound field 'b' in 'a::m::B'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/named_struct_middle_autocomplete.move:14:24
   │
14 │         let _tmp2 = _s.b.x;
   │                        ^ Possible dot names: 'a'

